# fu-go-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SETUP.md
src/: app.rs  go_deleter.rs  go_finder.rs  main.rs
src/tui/: mod.rs  ui.rs
src/util/: go_finder.rs  mod.rs
