[package]
name = "fu-go-rs"
version = "1.0.0-beta"
description = "Go uninstaller implemented in rust"
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
home = "0.5.11"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
